Dev/src/FinancialForce Reporting/objects/InquiryTemplateColumn__c.object
<CustomObject>
    <description>Stores details of a column that has been added to an action view template.</description>
    <fields>
        <fullName>ColumnWidth__c</fullName>
        <label>Column Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConditionFalseFillColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConditionFalseTextColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConditionToValue__c</fullName>
        <label>Condition To Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConditionTrueFillColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConditionTrueTextColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConditionValue__c</fullName>
        <label>Condition Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>&lt;&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>in range</fullName>
                </value>
                <value>
                    <fullName>not in range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataViewField__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Field</label>
        <referenceTo>DataViewField__c</referenceTo>
        <relationshipLabel>Action View Template Columns</relationshipLabel>
        <relationshipName>InquiryTemplateColumns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DecimalPlaces__c</fullName>
        <label>Decimal Places</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DrillInquiryTemplate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Drill Action View Template</label>
        <referenceTo>InquiryTemplate__c</referenceTo>
        <relationshipLabel>Drill Action View Template Columns</relationshipLabel>
        <relationshipName>DrillInquiryTemplateColumns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FormulaDp__c</fullName>
        <label>Formula Decimal Places</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InquiryTemplate__c</fullName>
        <label>Action View Template</label>
        <referenceTo>InquiryTemplate__c</referenceTo>
        <relationshipLabel>Action View Template Columns</relationshipLabel>
        <relationshipName>InquiryTemplateColumns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                </value>
                <value>
                    <fullName>COUNT</fullName>
                </value>
                <value>
                    <fullName>SUM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NegativeFillColor__c</fullName>
        <label>Negative Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NegativeNumberFormat__c</fullName>
        <label>Negative Number Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parenthesis</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Unsigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NegativeTextColor__c</fullName>
        <label>Negative Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PositiveFillColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PositiveTextColor__c</fullName>
        <label>Positive Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scaling__c</fullName>
        <label>Scaling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scale to Nearest Thousand</fullName>
                </value>
                <value>
                    <fullName>Scale to Nearest Million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShowNumberSeparators__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Separators</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowSummary__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Total This Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Formula</fullName>
                </value>
                <value>
                    <fullName>Count</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValueType__c</fullName>
        <label>Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NotNumber</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Action View Template Column</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action View Template Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>